...
                            Image(systemName: "magnifyingglass")
                                .foregroundColor(.gray)
                                .padding(.leading, 10)
                            Spacer()
                        }
                    )
                    .accessibilityIdentifier("BuscarUsuarios")
                    .padding(.horizontal)


                if viewModel.usuariosFiltrados.isEmpty {
                    Text("No hay usuarios disponibles")
                        .foregroundColor(.gray)
...
